--- a/projects/web/src/app/admin/privileges/detail/detail.component.html
+++ b/projects/web/src/app/admin/privileges/detail/detail.component.html
@@ -1,67 +1,69 @@
-<form class="card detail" *ngIf="(account.info | async) as info" #detailForm="ngForm" >
-  <div class="card-header d-flex justify-content-between align-content-center">
-    <h5 class="card-title mb-0">{{title}}</h5>
-    <div class="btn-group btn-group-sm">
+<nz-card *ngIf="(account.info | async) as info"
+  class="ant-card-data-detail m-0"
+  [nzTitle]="title" [nzExtra]="toolsTpl"
+  [nzActions]="editable ? [okTpl, cancelTpl] : []">
+  <ng-template #toolsTpl>
+    <nz-button-group>
       <button *ngIf="info.privileges['app_privileges.update'] && editable"
-        type="button" class="btn btn-sm btn-outline-primary"
+        type="button" nz-button nzType="primary"
         (click)="save()" [disabled]="!detailForm.valid">
-        <svg-icon iconPath="bi/check"></svg-icon> 保存
+        <svg-icon class="me-1" iconPath="bi/check"></svg-icon> 保存
       </button>
-      <button type="button" class="btn btn-sm btn-outline-secondary"
-        (click)="cancel()">
-        <svg-icon iconPath="bi/x"></svg-icon> 取消
+      <button type="button" nz-button nzType="default" (click)="cancel()">
+        <svg-icon class="me-1" iconPath="bi/x"></svg-icon> 取消
       </button>
-    </div>
-  </div>
-  <div class="card-body">
-    <div class="mb-3" [class.is-valid]="module.valid"
-      [class.is-invalid]="!(module.valid || module.pristine)">
-      <label class="form-label text-muted" for="module">权限模块 <i class="text-danger">*</i></label>
-      <input class="form-control" type="text" id="module" name="module"
-        placeholder="请输入权限模块 ..." [(ngModel)]="model.module"
-        [class.is-invalid]="!(module.valid || module.pristine)"
-        [class.is-valid]="module.valid"
-        required #module="ngModel" [disabled]="!editable" />
-    </div>
-    <div class="mb-3" [class.is-valid]="name.valid"
-      [class.is-invalid]="!(name.valid || name.pristine)">
-      <label class="form-label text-muted" for="name">权限名称 <i class="text-danger">*</i></label>
-      <input class="form-control" type="text" id="name" name="name"
-        placeholder="请输入权限名称 ..." [(ngModel)]="model.name"
-        [class.is-invalid]="!(name.valid || name.pristine)"
-        [class.is-valid]="name.valid"
-        required #name="ngModel" [disabled]="!editable" />
-    </div>
-    <div class="mb-3" [class.is-valid]="description.valid"
-      [class.is-invalid]="!(description.valid || description.pristine)">
-      <label class="form-label text-muted" for="description">权限描述 <i class="text-danger">*</i></label>
-      <input class="form-control" type="text" id="description" name="description"
-        placeholder="请输入权限描述 ..." [(ngModel)]="model.description"
-        [class.is-invalid]="!(description.valid || description.pristine)"
-        [class.is-valid]="description.valid"
-        required #description="ngModel" [disabled]="!editable"/>
-    </div>
-    <div class="mb-3">
-      <div class="form-check form-switch">
-        <input type="checkbox" class="form-check-input"
-          id="isRequired" name="isRequired"
-          [(ngModel)]="model.isRequired" [disabled]="!editable">
-        <label class="form-check-label text-muted"
-          for="isRequired">
-          是否必须的权限
-        </label>
-      </div>
-    </div>
-  </div>
-  <div *ngIf="info.privileges['app_privileges.update'] && editable"
-    class="card-footer d-flex justify-content-between">
-    <button type="button" class="btn btn-sm btn-outline-primary"
+    </nz-button-group>
+  </ng-template>
+  <form nz-form nzLayout="vertical" #detailForm="ngForm">
+    <nz-form-item>
+      <nz-form-label nzFor="module" [nzRequired]="true">
+        权限模块
+      </nz-form-label>
+      <nz-form-control [nzHasFeedback]="true">
+        <input type="text" id="module" name="module" nz-input
+          placeholder="请输入权限模块 ..." [(ngModel)]="model.module"
+          [required]="true" [disabled]="!editable"
+        />
+      </nz-form-control>
+    </nz-form-item>
+    <nz-form-item>
+      <nz-form-label nzFor="name" [nzRequired]="true">
+        权限名称
+      </nz-form-label>
+      <nz-form-control [nzHasFeedback]="true">
+        <input type="text" id="name" name="name" nz-input
+          placeholder="请输入权限名称 ..." [(ngModel)]="model.name"
+          [required]="true" [disabled]="!editable"
+        />
+      </nz-form-control>
+    </nz-form-item>
+    <nz-form-item>
+      <nz-form-label nzFor="description" [nzRequired]="true">权限描述</nz-form-label>
+      <nz-form-control [nzHasFeedback]="true">
+        <input type="text" id="description" name="description" nz-input
+          placeholder="请输入权限描述 ..." [(ngModel)]="model.description"
+          [required]="true" [disabled]="!editable"
+        />
+      </nz-form-control>
+    </nz-form-item>
+    <nz-form-item>
+      <label id="isRequired" name="isRequired" for="isRequired" nz-checkbox
+        [(ngModel)]="model.isRequired" [nzDisabled]="!editable">
+        必须的权限
+      </label>
+    </nz-form-item>
+  </form>
+  <ng-template #okTpl>
+    <button *ngIf="info.privileges['app_privileges.update'] && editable"
+      class="float-start ms-4" type="button" nz-button nzType="primary"
       (click)="save()" [disabled]="!detailForm.valid">
-      <svg-icon iconPath="bi/check"></svg-icon> 保存
+      <svg-icon class="me-1" iconPath="bi/check"></svg-icon> 保存
     </button>
-    <button type="button" class="btn btn-sm btn-outline-secondary"
+  </ng-template>
+  <ng-template #cancelTpl>
+    <button class="float-end me-4" type="button" nz-button nzType="default"
       (click)="cancel()">
-      <svg-icon iconPath="bi/x"></svg-icon> 取消
+      <svg-icon class="me-1" iconPath="bi/x"></svg-icon> 取消
     </button>
-  </div>
-</form>
+  </ng-template>
+</nz-card>
