--- a/projects/web/src/app/admin/storages/list/list.component.html
+++ b/projects/web/src/app/admin/storages/list/list.component.html
@@ -1,82 +1,40 @@
-<nav aria-label="breadcrumb">
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a routerLink="/">首页</a></li>
-    <li class="breadcrumb-item"><a routerLink="/admin">管理</a></li>
-    <li class="breadcrumb-item active" aria-current="page">存储管理</li>
-  </ol>
-</nav>
+<nz-breadcrumb class="m-3">
+  <nz-breadcrumb-item><a routerLink="/">首页</a></nz-breadcrumb-item>
+  <nz-breadcrumb-item><a routerLink="/admin">管理</a></nz-breadcrumb-item>
+  <nz-breadcrumb-item>存储管理</nz-breadcrumb-item>
+</nz-breadcrumb>
 <div class="container-fluid">
   <div class="row">
-    <div class="col-12">
-      <div class="card" *ngIf="(account.info | async) as info">
-        <div class="card-header d-flex justify-content-between">
-          <h5 class="card-title mb-0">存储管理</h5>
-          <div class="btn-group btn-group-sm">
+    <div class="col">
+      <nz-card *ngIf="(account.info | async) as info"
+        class="ant-card-data-list" nzTitle="存储管理" [nzExtra]="cardExtra">
+        <ng-template #cardExtra>
+          <nz-button-group>
             <button *ngIf="info.privileges['app_storages.create']"
-              type="button" class="btn btn-outline-primary"
+              type="button" nz-button nzType="primary"
               (click)="showDetail('0', true)">
-              <svg-icon iconPath="bi/plus"></svg-icon> 新建存储目录
+              <svg-icon class="me-1" iconPath="bi/plus"></svg-icon> 新建存储目录
             </button>
-            <button type="button" class="btn btn-outline-secondary"
-              (click)="loadData()">
-              <svg-icon iconPath="bi/arrow-repeat"></svg-icon> 刷新
+            <button type="button" nz-button nzType="default"
+              (click)="vm.search()">
+              <svg-icon class="me-1" iconPath="bi/arrow-repeat"></svg-icon> 刷新
             </button>
-          </div>
-        </div>
-        <form class="p-2 bg-light">
-          <div class="row">
-            <div class="col-6">
-              <div class="row g-0 align-items-center">
-                <label for="pageSize" class="col-auto col-form-label col-form-label-sm">
-                  显示：
-                </label>
-                <div class="col-auto">
-                  <select id="pageSize" name="pageSize"
-                    class="form-select form-select-sm"
-                    [(ngModel)]="vm.searchModel.take"
-                    (change)="vm.onPageSizeChange()">
-                    <option [value]="10">10</option>
-                    <option [value]="25">25</option>
-                    <option [value]="50">50</option>
-                    <option [value]="100">100</option>
-                  </select>
-                </div>
-                <div class="col-auto text-muted px-2 py-1">条记录</div>
-                <div class="col-auto text-muted px-2">
-                  <ng-container *ngIf="vm.loading">
-                    <svg-icon iconPath="bi/arrow-repeat" iconClass="bi-spin"></svg-icon> 加载中...
-                  </ng-container>
-                </div>
-              </div>
-            </div>
-            <div class="col-6">
-              <div class="row g-0">
-                <div class="col">
-                  <!-- <span class="text-muted">其它工具栏</span> -->
-                </div>
-                <div class="col">
-                  <!-- <span class="text-muted">其它工具栏</span> -->
-                </div>
-                <div class="col">
-                  <div class="input-group input-group-sm">
-                    <input class="form-control form-control-sm" type="text"
-                      placeholder="搜索别名或者路径" name="keywords"
-                      [(ngModel)]="vm.searchModel.keywords"
-                      (keyup.enter)="onKeywordsChanged()">
-                    <button *ngIf="vm.searchModel.keywords" class="btn btn-outline-secondary" type="button"
-                      (click)="clearKeywords()">
-                      <svg-icon iconPath="bi/x"></svg-icon>
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </form>
-        <div class="table-responsive">
-          <table class="table table-striped mb-0">
+          </nz-button-group>
+        </ng-template>
+        <ng-container *ngIf="(vm.data | async) as data">
+          <nz-table nzSize="small" [nzFrontPagination]="false"
+            [nzShowSizeChanger]="true"
+            [nzShowPagination]="true"
+            [nzShowQuickJumper]="true"
+            [nzData]="data"
+            [nzTotal]="(vm.total | async)!"
+            [nzShowTotal]="totalTpl"
+            [nzLoading]="vm.loading"
+            [nzPageSize]="vm.pageSize"
+            [nzPageSizeOptions]="vm.pageSizeOptions"
+            (nzQueryParams)="loadData($event)">
             <thead>
-              <tr>
+              <tr class="sticky-top">
                 <th scope="col" class="text-end text-nowrap text-muted table-row-num-col">#</th>
                 <th scope="col" class="text-start text-nowrap text-muted">别名</th>
                 <th scope="col" class="text-start text-nowrap text-muted">目录</th>
@@ -85,7 +43,7 @@
                 <th scope="col" class="text-center text-nowrap text-muted table-action-col-3">操作</th>
               </tr>
             </thead>
-            <tbody *ngIf="(vm.data | async) as data">
+            <tbody>
               <tr *ngFor="let item of data; let i = index;">
                 <th scope="row" class="text-end text-muted">{{i+1+vm.searchModel.skip}}</th>
                 <td class='text-start'>{{item.aliasName}}</td>
@@ -93,55 +51,35 @@
                 <td class='text-center'>{{item.readonly ? '是' : '否'}}</td>
                 <td class='text-start'>{{item.roles}}</td>
                 <td class="text-center">
-                  <div class="btn-group btn-group-sm">
+                  <nz-button-group>
                     <button *ngIf="info.privileges['app_storages.read_by_id']"
-                      class="btn btn-outline-secondary" ngbTooltip="详情" placement="top" [openDelay]="300" container="body"
+                      class="px-2" type="button" nz-button nzType="default"
+                      nz-tooltip="详情" nzTooltipPlacement="top"
                       (click)="showDetail(item.id, false)">
                       <svg-icon iconPath="bi/info-square"></svg-icon>
                     </button>
                     <button *ngIf="info.privileges['app_storages.update']"
-                      class="btn btn-outline-secondary" ngbTooltip="编辑" placement="top" [openDelay]="300" container="body"
+                      class="px-2" type="button" nz-button nzType="default"
+                      nz-tooltip="编辑" nzTooltipPlacement="top"
                       (click)="showDetail(item.id, true)">
                       <svg-icon iconPath="bi/pencil-square"></svg-icon>
                     </button>
                     <button *ngIf="info.privileges['app_storages.delete']"
-                      class="btn btn-outline-secondary" ngbTooltip="删除" placement="top" [openDelay]="300" container="body"
+                      class="px-2" type="button" nz-button nzType="default"
+                      nz-tooltip="删除" nzTooltipPlacement="top"
                       (click)="delete(item.id)">
                       <svg-icon iconPath="bi/trash"></svg-icon>
                     </button>
-                  </div>
+                  </nz-button-group>
                 </td>
               </tr>
             </tbody>
-          </table>
-        </div>
-        <div class="card-footer">
-          <div *ngIf="(vm.data | async) as data" class="row g-0">
-            <div class="col-6 d-flex align-items-center">
-              <div [class]="data.length > 0 ? 'text-muted' : 'text-warning'">
-                <ng-container *ngIf="data.length > 0;else emptyTpl">
-                  显示 {{vm.total | async}} 条记录中的第 {{vm.searchModel.skip + 1}} 至 {{vm.searchModel.skip + data.length}} 条
-                </ng-container>
-                <ng-template #emptyTpl>无数据！</ng-template>
-              </div>
-            </div>
-            <div class="col-6">
-              <ngb-pagination class="d-flex justify-content-end"
-                *ngIf="vm.showPagination"
-                size="sm"
-                [collectionSize]="(vm.total | async) || 0"
-                [page]="(vm.searchModel.skip / vm.searchModel.take) + 1"
-                [pageSize]="vm.searchModel.take"
-                [maxSize]="5"
-                [rotate]="true"
-                [boundaryLinks]="true"
-                [ellipses]="true"
-                (pageChange)="vm.onPageChange($event)">
-              </ngb-pagination>
-            </div>
-          </div>
-        </div>
-      </div>
+          </nz-table>
+        </ng-container>
+      </nz-card>
+      <ng-template #totalTpl let-total let-range="range">
+        当前显示 {{total}} 条记录中的第 {{range[0]}} 至 {{range[1]}} 条
+      </ng-template>
     </div>
   </div>
 </div>
