--- a/projects/web/src/app/admin/users/list/list.component.html
+++ b/projects/web/src/app/admin/users/list/list.component.html
@@ -77,6 +77,7 @@
             [nzTotal]="(vm.total | async)!"
             [nzShowTotal]="totalTpl"
             [nzLoading]="vm.loading"
+            [nzPageIndex]="vm.pageIndex"
             [nzPageSize]="vm.pageSize"
             [nzPageSizeOptions]="vm.pageSizeOptions"
             (nzQueryParams)="loadData($event)">
